# novelwriter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  VERSION  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  handoff-2026-03-11.md  handoff-2026-03-12.md  open-questions.md  project-checklist.md  project-plan.md  release-process.md  requirements.md  tasks.md  versioning.md
projects/: README.md
samples/: README.md
scripts/: README.md  publish_release.ps1  start_version.ps1
src/novel_writer/: __init__.py  __main__.py  gui.py  state.py
templates/: README.md  characters_template.md  foreshadowing_tracker.md  outline_template.md  world_settings.md
tests/: README.md  test_state.py
