[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shuangwen-pipeline"
version = "0.1.1"
description = "Planning-first longform webnovel writing assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
