[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shuangwen-pipeline"
version = "0.5.0.dev0"
description = "Planning-first longform webnovel writing assistant with desktop GUI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]

[project.scripts]
shuangwen-pipeline = "novel_writer.gui:main"
novel-writer = "novel_writer.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
